# week1

./: pyproject.toml  requirements.txt
src/git1.egg-info/: SOURCES.txt
